# ACSI_Drone

./: .gitignore  README.md  TODO.txt  minimum_jerk.py  mpc.py  simulator.py
Crazyflie_Matlab/: Crazyflie_MPC.m  compare_inner_control.m  configuration.mat  init.m  init_inner_controller.m  init_quadcopter_model.m  linearization_test_4output.mat
Crazyflie_Matlab/PID (trajectory)/: Current_Best_Linearization.mat  copter_world.wrl  init.m  init_inner_PD_d.m  inner_PD_angle_d.slx  inner_PD_angle_d.slx.r2016a  inner_PD_angle_d.slxc  inner_PD_thrust_d.slx  inner_PD_thrust_d.slxc  inner_pid_discrete_grant.slx  inner_pid_discrete_grant.slx.autosave  inner_pid_discrete_grant.slx.original  inner_pid_discrete_grant.slxc  inner_pid_discrete_test.slx  inner_pid_discrete_test.slxc  quadcopter_model_c.mdl  quadcopter_model_c.slxc  sfunc_inner_PD_angle_d.m  sfunc_inner_PD_thrust_d.m  thrust_mapping.m
Crazyflie_Matlab/Visualizations/: graph_crazyflie_ros.m  graph_crazyflie_ros.m~
Final_Presentation/: Final Presentation.pptx
Flight_Records/: test.bag
Parrot_Mambo/FanControl/: Fan Control.py  FanControl.ino
Parrot_Mambo/controller/: flightControlSystem.slx
Parrot_Mambo/dronecomms/: CMakeLists.txt  README.txt  package.xml
Parrot_Mambo/dronecomms/Trajectories/: InWind.csv
Parrot_Mambo/dronecomms/launch/: nnCSV.launch  trajectoryManual.launch
Parrot_Mambo/dronecomms/src/: droneComms.py  hoop_trajectory.py  interpolateTrajectories.py  trajectory_CSV_reader.py
Parrot_Mambo/dronecomms/srv/: interpolateTrajectory.srv
Parrot_Mambo/libraries/: dynamicsLibrary.slx  environmentLibrary.slx
Parrot_Mambo/linearAirframe/: linearAirframe.slx  trimNonlinearAirframe.slx
Parrot_Mambo/mainModels/: communicationHost.slx  parrotMambo.slx  positionAttitudeRef.mat
Parrot_Mambo/matlab_gen/jar/: dronecomms-0.0.0.md5
Parrot_Mambo/nnRosDeploy/: nnROSNode.slx  oldNN.mat
Parrot_Mambo/nnRosDeploy/nnrosnode/: CMakeLists.txt  MW_custom_RTOS_header.h  ert_main.cpp  nnROSNode.h  nnROSNode_RotorDynamics.cpp  nnROSNode_RotorDynamics.h  nnROSNode_types.h  rtGetInf.cpp  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtmodel.h  slros_busmsg_conversion.h  slros_initialize.cpp  slros_initialize.h
Parrot_Mambo/nonlinearAirframe/: loadNonLinearWindModel.m  nonlinearAirframe.slx  nonlinearAirframeWithWind.slx
Parrot_Mambo/resources/project/: ProjectData.type.Info.xml
Parrot_Mambo/support/: asbQuadcopterAHBase.wrl  asbWaypointMarker.wrl
Parrot_Mambo/tasks/: asbVariantDefinition.m  connectDroneToBlueTooth.m  controllerVars.m  customAnalysis.m  estimatorVars.m  postFlightAnalysis.m  sensorsVars.m  setGRTCodeGen.m  setMamboModel.m  setPARROTCodeGen.m  setRollingSpiderModel.m  startFlightInterface.m  vehicleVars.m
Parrot_Mambo/utilities/: createdBuses.mat  generateFlightCode.m  startVars.m
Parrot_Mambo/work/: LQRController.slxc  LQRController_msf.mexa64  asbQuadcopter.slxc  cameraModel.slxc  communicationFlightControlSystem.slxc  communicationHost.slxc  conversionYUV.slxc  flightControlSystem.slxc  flightControlSystem_cgxe.mexa64  flightController.slxc  flightControllerPID.slxc  linearAirframe.slxc  new.slxc  nnROSNode.slxc  nonlinearAirframe.slxc  parrotMambo.slxc  parrot_communication_host.slxc  stateEstimator.slxc
Parrot_Mambo/work/nnROSNode_ert_rtw/: buildInfo.mat  (+15 more)
cache/: B06FA8B3.json  DF52EEAF.json
devel/: .catkin  _setup_util.py  local_setup.sh
kivy/: launch.kv  launcher.py
kivy_launch/: launcher.py
src/ACSI_package/acsi/: package.xml
src/ACSI_package/acsi_controller/: CMakeLists.txt  package.xml  setup.py  simulator.py
src/ACSI_package/acsi_controller/msg/: Attitude_Error.msg  Attitude_Setpoint.msg  Drone_Pid_Settings.msg
src/ACSI_package/acsi_controller/node/: position_control_node.py
src/ACSI_package/acsi_controller/nodes/: position_control_node.py
src/ACSI_package/acsi_controller/src/acsi_mpc/: mpc.py  simulator.py
src/ACSI_package/acsi_controller/src/acsi_pid/: pid.py
src/ACSI_package/acsi_crazyflie/: CMakeLists.txt  TODO.txt  package.xml  setup.py
src/ACSI_package/acsi_crazyflie/nodes/: crazyflie_comms_node.py
src/ACSI_package/acsi_crazyflie/scripts/test/: ramp.py
src/ACSI_package/acsi_crazyflie/scripts/test/cache/: 87C498F8.json  F7A83CA9.json
src/ACSI_package/acsi_optitrack/: CMakeLists.txt  package.xml
src/ACSI_package/acsi_trajectory/: CMakeLists.txt  TODO.txt  __init__.py  package.xml  setup.py
src/ACSI_package/acsi_trajectory/launch/: Rory.launch  test.launch
src/ACSI_package/acsi_trajectory/nodes/: trajectory_node.py  trajectory_service.py
src/ACSI_package/acsi_trajectory/src/: trajectory_node.py
src/ACSI_package/acsi_trajectory/src/acsi_trajectory/: minimum_jerk.py
src/ACSI_package/acsi_trajectory/srv/: Trajectory_Service.srv
src/acsi_drone/: CMakeLists.txt
src/nnrosnode/: package.xml  rt_defines.h  slros_busmsg_conversion.cpp
(+872 files in other folders)
