<package>
  <name>acsi</name>
  <version>0.0.1</version>
  <description>ROS package for acsi project use</description>

  <maintainer email="gmetts@andrew.cmu.edu">Grant Metts</maintainer>

  <license>MIT</license>

  <author email="gmetts@andrew.cmu.edu">Grant Metts</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>acsi_trajectory</run_depend>
  <run_depend>acsi_controller</run_depend>
  <run_depend>acsi_optitrak</run_depend>
  <run_depend>acsi_crazyflie</run_depend>



  <export>
    <metapackage/>
  </export>
</package>
