<package>
  <name>acsi_optitrack</name>
  <version>0.0.1</version>
  <description>ROS meta-package for acsi_optitrack project use</description>

  <maintainer email="gmetts@andrew.cmu.edu">Grant Metts</maintainer>

  <license>MIT</license>

  <author email="gmetts@andrew.cmu.edu">Grant Metts</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>vrpn_client_ros</run_depend>


  <export>
    <metapackage/>
  </export>
</package>
